guba/log
2017-08-06 11:22:37 [guba_spider] ERROR: This is a logging test!
2017-08-06 11:24:18 [guba_spider] ERROR: This is a logging test!
2017-08-06 11:26:10 [guba_spider] ERROR: This is a logging test!
2017-08-06 11:26:10 [twisted] CRITICAL: Unhandled error in Deferred:
2017-08-06 11:26:10 [twisted] CRITICAL: 
Traceback (most recent call last):
  File "d:\programfiles\anaconda3\lib\site-packages\twisted\internet\defer.py", line 1386, in _inlineCallbacks
    result = g.send(result)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\crawler.py", line 77, in crawl
    self.engine = self._create_engine()
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\crawler.py", line 102, in _create_engine
    return ExecutionEngine(self, lambda _: self.stop())
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\core\engine.py", line 70, in __init__
    self.scraper = Scraper(crawler)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\core\scraper.py", line 71, in __init__
    self.itemproc = itemproc_cls.from_crawler(crawler)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\middleware.py", line 58, in from_crawler
    return cls.from_settings(crawler.settings, crawler)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\middleware.py", line 34, in from_settings
    mwcls = load_object(clspath)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\utils\misc.py", line 44, in load_object
    mod = import_module(module)
  File "d:\programfiles\anaconda3\lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 978, in _gcd_import
  File "<frozen importlib._bootstrap>", line 961, in _find_and_load
  File "<frozen importlib._bootstrap>", line 950, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 655, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 205, in _call_with_frames_removed
  File "E:\Git\Spider\guba\guba\pipelines.py", line 68
    except:
         ^
IndentationError: expected an indented block
2017-08-06 11:26:17 [guba_spider] ERROR: This is a logging test!
2017-08-06 11:26:17 [twisted] CRITICAL: Unhandled error in Deferred:
2017-08-06 11:26:17 [twisted] CRITICAL: 
Traceback (most recent call last):
  File "d:\programfiles\anaconda3\lib\site-packages\twisted\internet\defer.py", line 1386, in _inlineCallbacks
    result = g.send(result)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\crawler.py", line 77, in crawl
    self.engine = self._create_engine()
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\crawler.py", line 102, in _create_engine
    return ExecutionEngine(self, lambda _: self.stop())
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\core\engine.py", line 70, in __init__
    self.scraper = Scraper(crawler)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\core\scraper.py", line 71, in __init__
    self.itemproc = itemproc_cls.from_crawler(crawler)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\middleware.py", line 58, in from_crawler
    return cls.from_settings(crawler.settings, crawler)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\middleware.py", line 34, in from_settings
    mwcls = load_object(clspath)
  File "d:\programfiles\anaconda3\lib\site-packages\scrapy\utils\misc.py", line 44, in load_object
    mod = import_module(module)
  File "d:\programfiles\anaconda3\lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 978, in _gcd_import
  File "<frozen importlib._bootstrap>", line 961, in _find_and_load
  File "<frozen importlib._bootstrap>", line 950, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 655, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 205, in _call_with_frames_removed
  File "E:\Git\Spider\guba\guba\pipelines.py", line 68
    except:
         ^
IndentationError: expected an indented block
2017-08-06 11:26:31 [guba_spider] ERROR: This is a logging test!
2017-08-06 11:27:00 [guba_spider] ERROR: This is a logging test!
2017-08-06 11:54:07 [guba_spider] ERROR: This is a logging test!
2017-08-06 11:56:45 [guba_spider] ERROR: This is a logging test!
2017-08-06 11:56:46 [guba_spider] WARNING: open 600000 successfully!
2017-08-06 11:56:46 [guba_spider] WARNING: open 000001 successfully!
